Fixed invisible but rendered chunk breaking the layout during column resizing

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -67,7 +67,7 @@
 .rst-resizingContainer {
     box-sizing: content-box;
     min-height: 100%;
-    contain: layout;
+    contain: paint;
 }
 
 .rst-head {
